@@ -27,7 +27,7 @@
  */
 package org.hisp.dhis.analytics.data;
 
-import static java.util.stream.Collectors.toList;
+import static java.util.Objects.requireNonNull;
 import static org.apache.commons.collections4.CollectionUtils.addIgnoreNull;
 import static org.apache.commons.collections4.CollectionUtils.isNotEmpty;
 import static org.apache.commons.lang3.StringUtils.isNotEmpty;
@@ -63,6 +63,8 @@ import java.util.List;
 import java.util.Locale;
 import java.util.Objects;
 import java.util.Optional;
+import java.util.Set;
+import java.util.stream.Collectors;
 import lombok.RequiredArgsConstructor;
 import org.hisp.dhis.analytics.AnalyticsSecurityManager;
 import org.hisp.dhis.analytics.DataQueryParams;
@@ -81,9 +83,8 @@ import org.hisp.dhis.common.IdentifiableObjectManager;
 import org.hisp.dhis.common.IllegalQueryException;
 import org.hisp.dhis.feedback.ErrorMessage;
 import org.hisp.dhis.organisationunit.OrganisationUnit;
+import org.hisp.dhis.setting.UserSettings;
 import org.hisp.dhis.user.User;
-import org.hisp.dhis.user.UserSettingKey;
-import org.hisp.dhis.user.UserSettingService;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
 
@@ -93,13 +94,11 @@ import org.springframework.transaction.annotation.Transactional;
 @Service("org.hisp.dhis.analytics.DataQueryService")
 @RequiredArgsConstructor
 public class DefaultDataQueryService implements DataQueryService {
-  private final DimensionalObjectProducer dimensionalObjectProducer;
+  private final DimensionalObjectProvider dimensionalObjectProducer;
 
   private final IdentifiableObjectManager idObjectManager;
 
   private final AnalyticsSecurityManager securityManager;
-
-  private final UserSettingService userSettingService;
 
   // -------------------------------------------------------------------------
   // DataQueryService implementation
@@ -112,7 +111,7 @@ public class DefaultDataQueryService implements DataQueryService {
 
     IdScheme inputIdScheme = firstNonNull(request.getInputIdScheme(), UID);
 
-    Locale locale = (Locale) userSettingService.getUserSetting(UserSettingKey.DB_LOCALE);
+    Locale locale = UserSettings.getCurrentSettings().getUserDbLocale();
 
     if (isNotEmpty(request.getDimension())) {
       params.addDimensions(getDimensionalObjects(request));
@@ -176,7 +175,7 @@ public class DefaultDataQueryService implements DataQueryService {
   @Override
   @Transactional(readOnly = true)
   public DataQueryParams getFromAnalyticalObject(AnalyticalObject object) {
-    Objects.requireNonNull(object);
+    requireNonNull(object);
 
     DataQueryParams.Builder params = DataQueryParams.newBuilder();
 
@@ -184,7 +183,7 @@ public class DefaultDataQueryService implements DataQueryService {
 
     Date date = object.getRelativePeriodDate();
 
-    Locale locale = (Locale) userSettingService.getUserSetting(UserSettingKey.DB_LOCALE);
+    Locale locale = UserSettings.getCurrentSettings().getUserDbLocale();
 
     String userOrgUnit =
         object.getRelativeOrganisationUnit() != null
@@ -292,14 +291,14 @@ public class DefaultDataQueryService implements DataQueryService {
           getItemsFromParam(userOrgUnit).stream()
               .map(ou -> idObjectManager.get(OrganisationUnit.class, ou))
               .filter(Objects::nonNull)
-              .collect(toList()));
+              .toList());
     } else if (currentUser != null && params != null && params.getUserOrgUnitType() != null) {
       switch (params.getUserOrgUnitType()) {
         case DATA_CAPTURE:
           units.addAll(currentUser.getOrganisationUnits().stream().sorted().toList());
           break;
         case DATA_OUTPUT:
-          units.addAll(currentUser.getDataViewOrganisationUnits().stream().sorted().toList());
+          units.addAll(getAnalyticsOrganisationUnitsOrDefault(currentUser));
           break;
         case TEI_SEARCH:
           units.addAll(currentUser.getTeiSearchOrganisationUnits().stream().sorted().toList());
@@ -310,6 +309,30 @@ public class DefaultDataQueryService implements DataQueryService {
     }
 
     return units;
+  }
+
+  /**
+   * Retrieve the list of organisation units to which the current user has access rights. If the
+   * user has analytics organisation units assigned, those will be returned. Otherwise, it returns
+   * the default ones (data capture organisation units).
+   *
+   * @param currentUser {@link User}
+   * @return a list of {@link OrganisationUnit}.
+   */
+  private List<OrganisationUnit> getAnalyticsOrganisationUnitsOrDefault(User currentUser) {
+    Set<OrganisationUnit> organisationUnits = currentUser.getDataViewOrganisationUnits();
+    if (organisationUnits != null && !organisationUnits.isEmpty()) {
+      return organisationUnits.stream().sorted().toList();
+    } else {
+      // If the user has no analytics permissions for any organization unit,
+      // returns data capture organization units, instead.
+      Set<OrganisationUnit> defaultOrganisationUnits = currentUser.getOrganisationUnits();
+      if (defaultOrganisationUnits != null && !defaultOrganisationUnits.isEmpty()) {
+        return defaultOrganisationUnits.stream().sorted().toList();
+      }
+    }
+
+    return new ArrayList<>();
   }
 
   private List<DimensionalObject> getDimensionalObjects(DataQueryRequest request) {
@@ -339,6 +362,21 @@ public class DefaultDataQueryService implements DataQueryService {
     }
 
     return list;
+  }
+
+  /**
+   * Based on the given parameters, this method will return a list of {@link OrganisationUnit} UIDs
+   * based on the given items and user organisation units.
+   *
+   * @param items the list of items that might be included into the resulting organisation unit and
+   *     its keywords.
+   * @param userOrgUnits the list of organisation units associated with the current user.
+   * @return a list of {@link OrganisationUnit} UIDs.
+   */
+  @Override
+  public List<String> getOrgUnitDimensionUid(
+      List<String> items, List<OrganisationUnit> userOrgUnits) {
+    return dimensionalObjectProducer.getOrgUnitDimensionUid(items, userOrgUnits);
   }
 
   /**
@@ -419,6 +457,6 @@ public class DefaultDataQueryService implements DataQueryService {
     return items.stream()
         .map(item -> idObjectManager.getObject(CategoryOptionCombo.class, inputIdScheme, item))
         .filter(Objects::nonNull)
-        .collect(toList());
+        .collect(Collectors.toList());
   }
 }
