@@ -47,6 +47,7 @@ import java.util.Map;
 import java.util.Set;
 import java.util.stream.Collectors;
 import lombok.RequiredArgsConstructor;
+import org.hisp.dhis.common.UID;
 import org.hisp.dhis.test.utils.Assertions;
 import org.hisp.dhis.tracker.TrackerType;
 import org.hisp.dhis.tracker.imports.TrackerImportStrategy;
@@ -403,7 +404,7 @@ class PersistablesFilterTest {
   private static class Setup {
     private final TrackerBundle bundle;
 
-    private final EnumMap<TrackerType, Set<String>> invalidEntities;
+    private final EnumMap<TrackerType, Set<UID>> invalidEntities;
 
     /**
      * Setup builds the arguments for calling {@link PersistablesFilter#filter(TrackerBundle,
@@ -453,7 +454,7 @@ class PersistablesFilterTest {
        */
       Builder trackedEntity(String uid) {
         Entity<TrackedEntity> entity =
-            new Entity<>(TrackedEntity.builder().trackedEntity(uid).build());
+            new Entity<>(TrackedEntity.builder().trackedEntity(UID.of(uid)).build());
         this.trackedEntities.add(entity);
         current = entity;
         currentTrackedEntity = entity;
@@ -472,18 +473,17 @@ class PersistablesFilterTest {
        * @return builder
        */
       Builder enrollment(String uid) {
-        Entity<Enrollment> entity = enrollment(uid, currentTrackedEntity);
+        Entity<Enrollment> entity = enrollment(UID.of(uid), currentTrackedEntity);
         this.enrollments.add(entity);
         current = entity;
         currentEnrollment = entity;
         return this;
       }
 
-      private static Entity<Enrollment> enrollment(String uid, Entity<TrackedEntity> parent) {
+      private static Entity<Enrollment> enrollment(UID uid, Entity<TrackedEntity> parent) {
         // set child/parent links
         Enrollment enrollment =
             Enrollment.builder().enrollment(uid).trackedEntity(parent.entity.getUid()).build();
-        parent.entity.getEnrollments().add(enrollment);
         return new Entity<>(enrollment);
       }
 
@@ -499,18 +499,17 @@ class PersistablesFilterTest {
        * @return builder
        */
       Builder event(String uid) {
-        Entity<Event> entity = event(uid, currentEnrollment);
+        Entity<Event> entity = event(UID.of(uid), currentEnrollment);
         this.events.add(entity);
         current = entity;
         return this;
       }
 
-      private static Entity<Event> event(String uid, Entity<Enrollment> parent) {
+      private static Entity<Event> event(UID uid, Entity<Enrollment> parent) {
         // set child/parent links only if the event has a parent. Events in an event program have no
         // enrollment.
         // They do have a "fake" enrollment (a default program) but it's not set on the event DTO.
         Event event = Event.builder().event(uid).enrollment(parent.entity.getUid()).build();
-        parent.entity.getEvents().add(event);
         return new Entity<>(event);
       }
 
@@ -531,7 +530,7 @@ class PersistablesFilterTest {
        */
       Builder relationship(String uid, RelationshipItem from, RelationshipItem to) {
         Relationship relationship =
-            Relationship.builder().relationship(uid).from(from).to(to).build();
+            Relationship.builder().relationship(UID.of(uid)).from(from).to(to).build();
         Entity<Relationship> entity = new Entity<>(relationship);
         this.relationships.add(entity);
         current = entity;
@@ -547,8 +546,7 @@ class PersistablesFilterTest {
         bundle.setEvents(toEntitiesInPayload(events));
         bundle.setRelationships(toEntitiesInPayload(relationships));
 
-        EnumMap<TrackerType, Set<String>> invalidEntities =
-            PersistablesFilterTest.invalidEntities();
+        EnumMap<TrackerType, Set<UID>> invalidEntities = PersistablesFilterTest.invalidEntities();
         invalidEntities.get(TRACKED_ENTITY).addAll(invalid(trackedEntities));
         invalidEntities.get(ENROLLMENT).addAll(invalid(enrollments));
         invalidEntities.get(EVENT).addAll(invalid(events));
@@ -563,13 +561,10 @@ class PersistablesFilterTest {
       }
 
       private <T extends TrackerDto> List<T> toEntitiesInPayload(List<Entity<T>> entities) {
-        return entities.stream()
-            .filter(e -> e.isInPayload)
-            .map(e -> e.entity)
-            .collect(Collectors.toList());
+        return entities.stream().filter(e -> e.isInPayload).map(e -> e.entity).toList();
       }
 
-      private <T extends TrackerDto> Set<String> invalid(List<Entity<T>> entities) {
+      private <T extends TrackerDto> Set<UID> invalid(List<Entity<T>> entities) {
         return entities.stream()
             .filter(e -> !e.valid)
             .map(e -> e.entity.getUid())
@@ -625,18 +620,18 @@ class PersistablesFilterTest {
   }
 
   private static RelationshipItem trackedEntity(String uid) {
-    return RelationshipItem.builder().trackedEntity(uid).build();
+    return RelationshipItem.builder().trackedEntity(UID.of(uid)).build();
   }
 
   private static RelationshipItem enrollment(String uid) {
-    return RelationshipItem.builder().enrollment(uid).build();
+    return RelationshipItem.builder().enrollment(UID.of(uid)).build();
   }
 
   private static RelationshipItem event(String uid) {
-    return RelationshipItem.builder().event(uid).build();
+    return RelationshipItem.builder().event(UID.of(uid)).build();
   }
 
-  private static EnumMap<TrackerType, Set<String>> invalidEntities() {
+  private static EnumMap<TrackerType, Set<UID>> invalidEntities() {
     return new EnumMap<>(
         Map.of(
             TRACKED_ENTITY, new HashSet<>(),
@@ -647,12 +642,12 @@ class PersistablesFilterTest {
 
   private static <T extends TrackerDto> void assertContainsOnly(
       PersistablesFilter.Result persistable, Class<T> type, String... uid) {
-    Assertions.assertContainsOnly(List.of(uid), persistableUids(persistable, type));
+    Assertions.assertContainsOnly(UID.of(uid), persistableUids(persistable, type));
   }
 
-  private static <T extends TrackerDto> List<String> persistableUids(
+  private static <T extends TrackerDto> List<UID> persistableUids(
       PersistablesFilter.Result persistable, Class<T> type) {
-    return persistable.get(type).stream().map(TrackerDto::getUid).collect(Collectors.toList());
+    return persistable.get(type).stream().map(TrackerDto::getUid).toList();
   }
 
   private static void assertHasError(
@@ -672,8 +667,8 @@ class PersistablesFilterTest {
       }
 
       @Override
-      public String getUid() {
-        return uid;
+      public UID getUid() {
+        return UID.of(uid);
       }
     };
   }
