@@ -38,9 +38,9 @@ import static org.junit.jupiter.api.Assertions.assertEquals;
 import java.util.EnumMap;
 import java.util.List;
 import java.util.Map;
-import java.util.stream.Collectors;
+import org.hisp.dhis.common.UID;
+import org.hisp.dhis.tracker.TrackerIdSchemeParams;
 import org.hisp.dhis.tracker.TrackerType;
-import org.hisp.dhis.tracker.imports.TrackerIdSchemeParams;
 import org.hisp.dhis.tracker.imports.TrackerImportStrategy;
 import org.hisp.dhis.tracker.imports.bundle.TrackerBundle;
 import org.hisp.dhis.tracker.imports.domain.Event;
@@ -106,10 +106,11 @@ class AllTest {
 
   @Test
   void testAllDoesNotCallValidatorIfItShouldNotRunOnGivenStrategyForATrackerDto() {
+    UID uid = UID.generate();
     bundle =
         TrackerBundle.builder()
             .importStrategy(CREATE_AND_UPDATE)
-            .resolvedStrategyMap(new EnumMap<>(Map.of(TrackerType.EVENT, Map.of("event1", UPDATE))))
+            .resolvedStrategyMap(new EnumMap<>(Map.of(TrackerType.EVENT, Map.of(uid, UPDATE))))
             .build();
 
     Validator<Event> validator =
@@ -137,7 +138,7 @@ class AllTest {
               }
             });
 
-    validator.validate(reporter, bundle, Event.builder().event("event1").build());
+    validator.validate(reporter, bundle, Event.builder().event(uid).build());
 
     assertContainsOnly(List.of("V2"), actualErrorMessages());
   }
@@ -149,10 +150,11 @@ class AllTest {
    */
   private static void addError(Reporter reporter, String message) {
     reporter.addError(
-        new Error(message, ValidationCode.E9999, TrackerType.TRACKED_ENTITY, "uid", List.of()));
+        new Error(
+            message, ValidationCode.E9999, TrackerType.TRACKED_ENTITY, UID.generate(), List.of()));
   }
 
   private List<String> actualErrorMessages() {
-    return reporter.getErrors().stream().map(Error::getMessage).collect(Collectors.toList());
+    return reporter.getErrors().stream().map(Error::getMessage).toList();
   }
 }
