@@ -40,10 +40,10 @@ import static org.hisp.dhis.tracker.imports.validation.validator.Seq.seq;
 import java.util.EnumMap;
 import java.util.List;
 import java.util.Map;
-import java.util.stream.Collectors;
 import lombok.RequiredArgsConstructor;
+import org.hisp.dhis.common.UID;
+import org.hisp.dhis.tracker.TrackerIdSchemeParams;
 import org.hisp.dhis.tracker.TrackerType;
-import org.hisp.dhis.tracker.imports.TrackerIdSchemeParams;
 import org.hisp.dhis.tracker.imports.TrackerImportStrategy;
 import org.hisp.dhis.tracker.imports.bundle.TrackerBundle;
 import org.hisp.dhis.tracker.imports.domain.Event;
@@ -183,10 +183,11 @@ class SeqTest {
 
   @Test
   void testSeqDoesNotCallValidatorsIfItShouldNotRunOnGivenStrategyForATrackerDto() {
+    UID uid = UID.generate();
     bundle =
         TrackerBundle.builder()
             .importStrategy(CREATE_AND_UPDATE)
-            .resolvedStrategyMap(new EnumMap<>(Map.of(TrackerType.EVENT, Map.of("event1", UPDATE))))
+            .resolvedStrategyMap(new EnumMap<>(Map.of(TrackerType.EVENT, Map.of(uid, UPDATE))))
             .build();
 
     Validator<Event> validator =
@@ -214,7 +215,7 @@ class SeqTest {
               }
             });
 
-    validator.validate(reporter, bundle, Event.builder().event("event1").build());
+    validator.validate(reporter, bundle, Event.builder().event(uid).build());
 
     assertContainsOnly(List.of("V2"), actualErrorMessages());
   }
@@ -244,7 +245,8 @@ class SeqTest {
    */
   private static void addError(Reporter reporter, String message) {
     reporter.addError(
-        new Error(message, ValidationCode.E9999, TrackerType.TRACKED_ENTITY, "uid", List.of()));
+        new Error(
+            message, ValidationCode.E9999, TrackerType.TRACKED_ENTITY, UID.generate(), List.of()));
   }
 
   /**
@@ -256,8 +258,8 @@ class SeqTest {
   private static TrackerDto dummyDto() {
     return new TrackerDto() {
       @Override
-      public String getUid() {
-        return "uid";
+      public UID getUid() {
+        return UID.generate();
       }
 
       @Override
@@ -268,6 +270,6 @@ class SeqTest {
   }
 
   private List<String> actualErrorMessages() {
-    return reporter.getErrors().stream().map(Error::getMessage).collect(Collectors.toList());
+    return reporter.getErrors().stream().map(Error::getMessage).toList();
   }
 }
