@@ -31,9 +31,6 @@ import static org.hisp.dhis.common.OrganisationUnitSelectionMode.ACCESSIBLE;
 import static org.hisp.dhis.common.OrganisationUnitSelectionMode.DESCENDANTS;
 import static org.hisp.dhis.common.OrganisationUnitSelectionMode.SELECTED;
 import static org.hisp.dhis.test.utils.Assertions.assertContainsOnly;
-import static org.hisp.dhis.test.utils.Assertions.assertIsEmpty;
-import static org.hisp.dhis.tracker.Assertions.assertNoErrors;
-import static org.junit.jupiter.api.Assertions.assertAll;
 import static org.junit.jupiter.api.Assertions.assertEquals;
 import static org.junit.jupiter.api.Assertions.assertNotNull;
 
@@ -41,9 +38,6 @@ import java.io.IOException;
 import java.util.Collections;
 import java.util.Comparator;
 import java.util.List;
-import java.util.Map;
-import java.util.Set;
-import java.util.stream.Collectors;
 import java.util.stream.Stream;
 import org.hisp.dhis.common.BaseIdentifiableObject;
 import org.hisp.dhis.common.IdentifiableObject;
@@ -61,9 +55,12 @@ import org.hisp.dhis.program.Event;
 import org.hisp.dhis.program.Program;
 import org.hisp.dhis.program.ProgramStage;
 import org.hisp.dhis.relationship.Relationship;
+import org.hisp.dhis.test.integration.PostgresIntegrationTestBase;
 import org.hisp.dhis.trackedentity.TrackedEntity;
 import org.hisp.dhis.trackedentity.TrackedEntityType;
-import org.hisp.dhis.tracker.TrackerTest;
+import org.hisp.dhis.tracker.Page;
+import org.hisp.dhis.tracker.PageParams;
+import org.hisp.dhis.tracker.TestSetup;
 import org.hisp.dhis.tracker.TrackerType;
 import org.hisp.dhis.tracker.export.enrollment.EnrollmentOperationParams;
 import org.hisp.dhis.tracker.export.enrollment.EnrollmentService;
@@ -75,19 +72,22 @@ import org.hisp.dhis.tracker.export.relationship.RelationshipOperationParams;
 import org.hisp.dhis.tracker.export.relationship.RelationshipService;
 import org.hisp.dhis.tracker.export.trackedentity.TrackedEntityOperationParams;
 import org.hisp.dhis.tracker.export.trackedentity.TrackedEntityService;
-import org.hisp.dhis.tracker.imports.TrackerImportParams;
-import org.hisp.dhis.tracker.imports.TrackerImportService;
 import org.hisp.dhis.user.User;
 import org.junit.jupiter.api.BeforeAll;
 import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
+import org.junit.jupiter.api.TestInstance;
 import org.junit.jupiter.params.ParameterizedTest;
 import org.junit.jupiter.params.provider.Arguments;
 import org.junit.jupiter.params.provider.MethodSource;
 import org.springframework.beans.factory.annotation.Autowired;
+import org.springframework.transaction.annotation.Transactional;
 
 /** Tests ordering and pagination of tracker exporters via the service layer. */
-class OrderAndPaginationExporterTest extends TrackerTest {
+@Transactional
+@TestInstance(TestInstance.Lifecycle.PER_CLASS)
+class OrderAndPaginationExporterTest extends PostgresIntegrationTestBase {
+  @Autowired private TestSetup testSetup;
 
   @Autowired private TrackedEntityService trackedEntityService;
 
@@ -96,8 +96,6 @@ class OrderAndPaginationExporterTest extends TrackerTest {
   @Autowired private EventService eventService;
 
   @Autowired private RelationshipService relationshipService;
-
-  @Autowired private TrackerImportService trackerImportService;
 
   @Autowired private IdentifiableObjectManager manager;
 
@@ -113,14 +111,12 @@ class OrderAndPaginationExporterTest extends TrackerTest {
 
   @BeforeAll
   void setUp() throws IOException {
-    setUpMetadata("tracker/simple_metadata.json");
+    testSetup.importMetadata();
 
     importUser = userService.getUser("tTgjgobT1oS");
     injectSecurityContextUser(importUser);
 
-    TrackerImportParams params = TrackerImportParams.builder().userId(importUser.getUid()).build();
-    assertNoErrors(
-        trackerImportService.importTracker(params, fromJson("tracker/event_and_enrollment.json")));
+    testSetup.importTrackerData();
     orgUnit = get(OrganisationUnit.class, "h4w96yEMlzO");
     programStage = get(ProgramStage.class, "NpsdDv6kKSO");
     trackedEntityType = get(TrackedEntityType.class, "ja8NY4PW7Xm");
@@ -144,69 +140,101 @@ class OrderAndPaginationExporterTest extends TrackerTest {
       throws ForbiddenException, BadRequestException, NotFoundException {
     TrackedEntityOperationParams params =
         TrackedEntityOperationParams.builder()
-            .organisationUnits(Set.of(orgUnit.getUid()))
+            .organisationUnits(orgUnit)
             .orgUnitMode(DESCENDANTS)
-            .trackedEntityTypeUid(trackedEntityType.getUid())
+            .trackedEntityType(trackedEntityType)
             .orderBy(UID.of("numericAttr"), SortDirection.ASC)
             .build();
 
-    Page<TrackedEntity> firstPage =
-        trackedEntityService.getTrackedEntities(params, new PageParams(1, 3, false));
+    Page<String> firstPage =
+        trackedEntityService
+            .findTrackedEntities(params, new PageParams(1, 3, false))
+            .withMappedItems(IdentifiableObject::getUid);
 
-    assertAll(
-        "first page",
-        () -> assertPage(1, 3, firstPage),
-        () ->
-            assertEquals(
-                List.of("dUE514NMOlo", "mHWCacsGYYn", "QS6w44flWAf"), uids(firstPage.getItems())));
+    assertEquals(
+        new Page<>(List.of("dUE514NMOlo", "mHWCacsGYYn", "QS6w44flWAf"), 1, 3, null, null, 2),
+        firstPage,
+        "first page");
 
-    Page<TrackedEntity> secondPage =
-        trackedEntityService.getTrackedEntities(params, new PageParams(2, 3, false));
+    Page<String> secondPage =
+        trackedEntityService
+            .findTrackedEntities(params, new PageParams(2, 3, true))
+            .withMappedItems(IdentifiableObject::getUid);
 
-    assertAll(
-        "second (last) page",
-        () -> assertPage(2, 3, secondPage),
-        () ->
-            assertEquals(
-                List.of("QesgJkTyTCk", "woitxQbWYNq", "guVNoAerxWo"), uids(secondPage.getItems())));
+    assertEquals(
+        new Page<>(List.of("QesgJkTyTCk", "woitxQbWYNq", "guVNoAerxWo"), 2, 3, 6L, 1, null),
+        secondPage,
+        "second (last) page");
 
-    assertIsEmpty(
-        trackedEntityService.getTrackedEntities(params, new PageParams(3, 3, false)).getItems());
+    Page<String> thirdPage =
+        trackedEntityService
+            .findTrackedEntities(params, new PageParams(3, 3, false))
+            .withMappedItems(IdentifiableObject::getUid);
+
+    assertEquals(new Page<>(List.of(), 3, 3, null, 2, null), thirdPage, "past the last page");
   }
 
   @Test
-  void shouldReturnPaginatedTrackedEntitiesGivenNonDefaultPageSizeAndTotalPages()
+  void shouldReturnPaginatedTrackedEntitiesWithMaxTeCountToReturnOnProgram()
       throws ForbiddenException, BadRequestException, NotFoundException {
+    injectSecurityContextUser(userService.getUser("FIgVWzUCkpw"));
+
     TrackedEntityOperationParams params =
         TrackedEntityOperationParams.builder()
-            .organisationUnits(Set.of(orgUnit.getUid()))
-            .orgUnitMode(DESCENDANTS)
-            .trackedEntityTypeUid(trackedEntityType.getUid())
+            .organisationUnits(orgUnit)
+            .orgUnitMode(SELECTED)
+            .program(UID.of("BFcipDERJnf"))
+            .trackedEntities(UID.of("QS6w44flWAf", "dUE514NMOlo"))
             .orderBy(UID.of("numericAttr"), SortDirection.ASC)
             .build();
 
-    Page<TrackedEntity> firstPage =
-        trackedEntityService.getTrackedEntities(params, new PageParams(1, 3, true));
+    Page<String> firstPage =
+        trackedEntityService
+            .findTrackedEntities(params, new PageParams(1, 1, false))
+            .withMappedItems(IdentifiableObject::getUid);
 
-    assertAll(
-        "first page",
-        () -> assertPage(1, 3, 6, firstPage),
-        () ->
-            assertEquals(
-                List.of("dUE514NMOlo", "mHWCacsGYYn", "QS6w44flWAf"), uids(firstPage.getItems())));
+    assertEquals(new Page<>(List.of("dUE514NMOlo"), 1, 1, null, null, 2), firstPage, "first page");
 
-    Page<TrackedEntity> secondPage =
-        trackedEntityService.getTrackedEntities(params, new PageParams(2, 3, true));
+    Page<String> secondPage =
+        trackedEntityService
+            .findTrackedEntities(params, new PageParams(2, 1, true))
+            .withMappedItems(IdentifiableObject::getUid);
 
-    assertAll(
-        "second (last) page",
-        () -> assertPage(2, 3, 6, secondPage),
-        () ->
-            assertEquals(
-                List.of("QesgJkTyTCk", "woitxQbWYNq", "guVNoAerxWo"), uids(secondPage.getItems())));
+    assertEquals(
+        new Page<>(List.of("QS6w44flWAf"), 2, 1, 2L, 1, null), secondPage, "second (last) page");
 
-    assertIsEmpty(
-        trackedEntityService.getTrackedEntities(params, new PageParams(3, 3, true)).getItems());
+    Page<String> thirdPage =
+        trackedEntityService
+            .findTrackedEntities(params, new PageParams(3, 1, false))
+            .withMappedItems(IdentifiableObject::getUid);
+
+    assertEquals(new Page<>(List.of(), 3, 1, null, 2, null), thirdPage, "past the last page");
+  }
+
+  @Test
+  void shouldOrderTrackedEntitiesByInactiveAndByDefaultOrder()
+      throws ForbiddenException, BadRequestException, NotFoundException {
+    List<String> expected =
+        Stream.of(
+                get(TrackedEntity.class, "QesgJkTyTCk"),
+                get(TrackedEntity.class, "dUE514NMOlo"),
+                get(TrackedEntity.class, "mHWCacsGYYn"))
+            .sorted(Comparator.comparing(TrackedEntity::getId).reversed()) // reversed = desc
+            .map(TrackedEntity::getUid)
+            .toList();
+
+    TrackedEntityOperationParams params =
+        TrackedEntityOperationParams.builder()
+            .organisationUnits(orgUnit)
+            .orgUnitMode(SELECTED)
+            .trackedEntities(UID.of("mHWCacsGYYn", "QesgJkTyTCk", "dUE514NMOlo"))
+            .trackedEntityType(trackedEntityType)
+            .orderBy("inactive", SortDirection.ASC)
+            .build();
+
+    List<String> trackedEntities = getTrackedEntities(params);
+
+    assertEquals(expected, trackedEntities);
   }
 
   @Test
@@ -222,10 +250,10 @@ class OrderAndPaginationExporterTest extends TrackerTest {
 
     TrackedEntityOperationParams params =
         TrackedEntityOperationParams.builder()
-            .organisationUnits(Set.of(orgUnit.getUid()))
+            .organisationUnits(orgUnit)
             .orgUnitMode(SELECTED)
-            .trackedEntityUids(Set.of("QS6w44flWAf", "dUE514NMOlo"))
-            .trackedEntityTypeUid(trackedEntityType.getUid())
+            .trackedEntities(UID.of("QS6w44flWAf", "dUE514NMOlo"))
+            .trackedEntityType(trackedEntityType)
             .build();
 
     List<String> trackedEntities = getTrackedEntities(params);
@@ -241,10 +269,10 @@ class OrderAndPaginationExporterTest extends TrackerTest {
 
     TrackedEntityOperationParams params =
         TrackedEntityOperationParams.builder()
-            .organisationUnits(Set.of(orgUnit.getUid()))
+            .organisationUnits(orgUnit)
             .orgUnitMode(SELECTED)
-            .trackedEntityUids(Set.of("QS6w44flWAf", "dUE514NMOlo"))
-            .trackedEntityTypeUid(trackedEntityType.getUid())
+            .trackedEntities(UID.of("QS6w44flWAf", "dUE514NMOlo"))
+            .trackedEntityType(trackedEntityType)
             .orderBy("created", SortDirection.ASC)
             .build();
 
@@ -273,10 +301,10 @@ class OrderAndPaginationExporterTest extends TrackerTest {
 
     TrackedEntityOperationParams params =
         TrackedEntityOperationParams.builder()
-            .organisationUnits(Set.of(orgUnit.getUid()))
+            .organisationUnits(orgUnit)
             .orgUnitMode(SELECTED)
-            .trackedEntityUids(Set.of("QS6w44flWAf", "dUE514NMOlo"))
-            .trackedEntityTypeUid(trackedEntityType.getUid())
+            .trackedEntities(UID.of("QS6w44flWAf", "dUE514NMOlo"))
+            .trackedEntityType(trackedEntityType)
             .orderBy("created", SortDirection.DESC)
             .build();
 
@@ -302,10 +330,10 @@ class OrderAndPaginationExporterTest extends TrackerTest {
       throws ForbiddenException, BadRequestException, NotFoundException {
     TrackedEntityOperationParams params =
         TrackedEntityOperationParams.builder()
-            .organisationUnits(Set.of(orgUnit.getUid()))
+            .organisationUnits(orgUnit)
             .orgUnitMode(SELECTED)
-            .trackedEntityUids(Set.of("QS6w44flWAf", "dUE514NMOlo"))
-            .trackedEntityTypeUid(trackedEntityType.getUid())
+            .trackedEntities(UID.of("QS6w44flWAf", "dUE514NMOlo"))
+            .trackedEntityType(trackedEntityType)
             .orderBy("createdAtClient", SortDirection.DESC)
             .build();
 
@@ -319,10 +347,10 @@ class OrderAndPaginationExporterTest extends TrackerTest {
       throws ForbiddenException, BadRequestException, NotFoundException {
     TrackedEntityOperationParams params =
         TrackedEntityOperationParams.builder()
-            .organisationUnits(Set.of(orgUnit.getUid()))
+            .organisationUnits(orgUnit)
             .orgUnitMode(SELECTED)
-            .trackedEntityUids(Set.of("QS6w44flWAf", "dUE514NMOlo"))
-            .trackedEntityTypeUid(trackedEntityType.getUid())
+            .trackedEntities(UID.of("QS6w44flWAf", "dUE514NMOlo"))
+            .trackedEntityType(trackedEntityType)
             .orderBy("createdAtClient", SortDirection.ASC)
             .build();
 
@@ -336,10 +364,10 @@ class OrderAndPaginationExporterTest extends TrackerTest {
       throws ForbiddenException, BadRequestException, NotFoundException {
     TrackedEntityOperationParams params =
         TrackedEntityOperationParams.builder()
-            .organisationUnits(Set.of(orgUnit.getUid()))
+            .organisationUnits(orgUnit)
             .orgUnitMode(SELECTED)
-            .trackedEntityUids(Set.of("QS6w44flWAf", "dUE514NMOlo"))
-            .trackedEntityTypeUid(trackedEntityType.getUid())
+            .trackedEntities(UID.of("QS6w44flWAf", "dUE514NMOlo"))
+            .trackedEntityType(trackedEntityType)
             .orderBy("enrollment.enrollmentDate", SortDirection.ASC)
             .build();
 
@@ -353,10 +381,10 @@ class OrderAndPaginationExporterTest extends TrackerTest {
       throws ForbiddenException, BadRequestException, NotFoundException {
     TrackedEntityOperationParams params =
         TrackedEntityOperationParams.builder()
-            .organisationUnits(Set.of(orgUnit.getUid()))
+            .organisationUnits(orgUnit)
             .orgUnitMode(SELECTED)
-            .trackedEntityUids(Set.of("QS6w44flWAf", "dUE514NMOlo"))
-            .trackedEntityTypeUid(trackedEntityType.getUid())
+            .trackedEntities(UID.of("QS6w44flWAf", "dUE514NMOlo"))
+            .trackedEntityType(trackedEntityType)
             .orderBy("enrollment.enrollmentDate", SortDirection.DESC)
             .build();
 
@@ -373,11 +401,11 @@ class OrderAndPaginationExporterTest extends TrackerTest {
       throws ForbiddenException, BadRequestException, NotFoundException {
     TrackedEntityOperationParams params =
         TrackedEntityOperationParams.builder()
-            .organisationUnits(Set.of(orgUnit.getUid()))
+            .organisationUnits(orgUnit)
             .orgUnitMode(SELECTED)
-            .trackedEntityUids(Set.of("QS6w44flWAf", "dUE514NMOlo"))
-            .trackedEntityTypeUid(trackedEntityType.getUid())
-            .programUid("BFcipDERJnf")
+            .trackedEntities(UID.of("QS6w44flWAf", "dUE514NMOlo"))
+            .trackedEntityType(trackedEntityType)
+            .program(UID.of("BFcipDERJnf"))
             .orderBy("enrollment.enrollmentDate", SortDirection.DESC)
             .build();
 
@@ -391,10 +419,10 @@ class OrderAndPaginationExporterTest extends TrackerTest {
       throws ForbiddenException, BadRequestException, NotFoundException {
     TrackedEntityOperationParams params =
         TrackedEntityOperationParams.builder()
-            .organisationUnits(Set.of(orgUnit.getUid()))
+            .organisationUnits(orgUnit)
             .orgUnitMode(SELECTED)
-            .trackedEntityUids(Set.of("QS6w44flWAf", "dUE514NMOlo"))
-            .trackedEntityTypeUid(trackedEntityType.getUid())
+            .trackedEntities(UID.of("QS6w44flWAf", "dUE514NMOlo"))
+            .trackedEntityType(trackedEntityType)
             .orderBy(UID.of("toDelete000"), SortDirection.ASC)
             .orderBy("enrollment.enrollmentDate", SortDirection.ASC)
             .build();
@@ -409,10 +437,10 @@ class OrderAndPaginationExporterTest extends TrackerTest {
       throws ForbiddenException, BadRequestException, NotFoundException {
     TrackedEntityOperationParams params =
         TrackedEntityOperationParams.builder()
-            .organisationUnits(Set.of(orgUnit.getUid()))
+            .organisationUnits(orgUnit)
             .orgUnitMode(SELECTED)
-            .trackedEntityUids(Set.of("QS6w44flWAf", "dUE514NMOlo"))
-            .trackedEntityTypeUid(trackedEntityType.getUid())
+            .trackedEntities(UID.of("QS6w44flWAf", "dUE514NMOlo"))
+            .trackedEntityType(trackedEntityType)
             .orderBy(UID.of("toUpdate000"), SortDirection.ASC)
             .build();
 
@@ -426,10 +454,10 @@ class OrderAndPaginationExporterTest extends TrackerTest {
       throws ForbiddenException, BadRequestException, NotFoundException {
     TrackedEntityOperationParams params =
         TrackedEntityOperationParams.builder()
-            .organisationUnits(Set.of(orgUnit.getUid()))
+            .organisationUnits(orgUnit)
             .orgUnitMode(SELECTED)
-            .trackedEntityUids(Set.of("QS6w44flWAf", "dUE514NMOlo"))
-            .trackedEntityTypeUid(trackedEntityType.getUid())
+            .trackedEntities(UID.of("QS6w44flWAf", "dUE514NMOlo"))
+            .trackedEntityType(trackedEntityType)
             .orderBy(UID.of("toUpdate000"), SortDirection.DESC)
             .build();
 
@@ -443,11 +471,11 @@ class OrderAndPaginationExporterTest extends TrackerTest {
       throws ForbiddenException, BadRequestException, NotFoundException {
     TrackedEntityOperationParams params =
         TrackedEntityOperationParams.builder()
-            .organisationUnits(Set.of(orgUnit.getUid()))
+            .organisationUnits(orgUnit)
             .orgUnitMode(SELECTED)
-            .trackedEntityTypeUid(trackedEntityType.getUid())
+            .trackedEntityType(trackedEntityType)
             .orderBy(UID.of("toUpdate000"), SortDirection.ASC)
-            .filters(Map.of("numericAttr", List.of(new QueryFilter(QueryOperator.LT, "75"))))
+            .filterBy(UID.of("numericAttr"), List.of(new QueryFilter(QueryOperator.LT, "75")))
             .build();
 
     List<String> trackedEntities = getTrackedEntities(params);
@@ -460,10 +488,10 @@ class OrderAndPaginationExporterTest extends TrackerTest {
       throws ForbiddenException, BadRequestException, NotFoundException {
     TrackedEntityOperationParams params =
         TrackedEntityOperationParams.builder()
-            .organisationUnits(Set.of(orgUnit.getUid()))
+            .organisationUnits(orgUnit)
             .orgUnitMode(SELECTED)
-            .trackedEntityTypeUid(trackedEntityType.getUid())
-            .filters(Map.of("numericAttr", List.of(new QueryFilter(QueryOperator.LT, "75"))))
+            .trackedEntityType(trackedEntityType)
+            .filterBy(UID.of("numericAttr"), List.of(new QueryFilter(QueryOperator.LT, "75")))
             .orderBy(UID.of("numericAttr"), SortDirection.DESC)
             .build();
 
@@ -477,11 +505,11 @@ class OrderAndPaginationExporterTest extends TrackerTest {
       throws ForbiddenException, BadRequestException, NotFoundException {
     TrackedEntityOperationParams params =
         TrackedEntityOperationParams.builder()
-            .organisationUnits(Set.of(orgUnit.getUid()))
+            .organisationUnits(orgUnit)
             .orgUnitMode(SELECTED)
-            .trackedEntityTypeUid(trackedEntityType.getUid())
-            .trackedEntityUids(
-                Set.of(
+            .trackedEntityType(trackedEntityType)
+            .trackedEntities(
+                UID.of(
                     "dUE514NMOlo", "QS6w44flWAf")) // TE QS6w44flWAf without attribute notUpdated0
             .orderBy(UID.of("notUpdated0"), SortDirection.DESC)
             .build();
@@ -499,10 +527,10 @@ class OrderAndPaginationExporterTest extends TrackerTest {
       throws ForbiddenException, BadRequestException, NotFoundException {
     TrackedEntityOperationParams params =
         TrackedEntityOperationParams.builder()
-            .organisationUnits(Set.of(orgUnit.getUid()))
+            .organisationUnits(orgUnit)
             .orgUnitMode(SELECTED)
-            .trackedEntityUids(Set.of("QS6w44flWAf", "dUE514NMOlo"))
-            .trackedEntityTypeUid(trackedEntityType.getUid())
+            .trackedEntities(UID.of("QS6w44flWAf", "dUE514NMOlo"))
+            .trackedEntityType(trackedEntityType)
             .orderBy(UID.of("toDelete000"), SortDirection.DESC)
             .orderBy(UID.of("numericAttr"), SortDirection.ASC)
             .build();
@@ -517,10 +545,10 @@ class OrderAndPaginationExporterTest extends TrackerTest {
       throws ForbiddenException, BadRequestException, NotFoundException {
     TrackedEntityOperationParams params =
         TrackedEntityOperationParams.builder()
-            .organisationUnits(Set.of(orgUnit.getUid()))
+            .organisationUnits(orgUnit)
             .orgUnitMode(SELECTED)
-            .trackedEntityUids(Set.of("QS6w44flWAf", "dUE514NMOlo"))
-            .trackedEntityTypeUid(trackedEntityType.getUid())
+            .trackedEntities(UID.of("QS6w44flWAf", "dUE514NMOlo"))
+            .trackedEntityType(trackedEntityType)
             .orderBy(UID.of("toDelete000"), SortDirection.DESC)
             .orderBy(UID.of("numericAttr"), SortDirection.DESC)
             .build();
@@ -536,10 +564,10 @@ class OrderAndPaginationExporterTest extends TrackerTest {
 
     TrackedEntityOperationParams params =
         TrackedEntityOperationParams.builder()
-            .organisationUnits(Set.of(orgUnit.getUid()))
+            .organisationUnits(orgUnit)
             .orgUnitMode(SELECTED)
-            .trackedEntityUids(Set.of("QS6w44flWAf", "dUE514NMOlo"))
-            .trackedEntityTypeUid(trackedEntityType.getUid())
+            .trackedEntities(UID.of("QS6w44flWAf", "dUE514NMOlo"))
+            .trackedEntityType(trackedEntityType)
             .orderBy("inactive", SortDirection.DESC)
             .build();
 
@@ -554,10 +582,10 @@ class OrderAndPaginationExporterTest extends TrackerTest {
 
     TrackedEntityOperationParams params =
         TrackedEntityOperationParams.builder()
-            .organisationUnits(Set.of(orgUnit.getUid()))
+            .organisationUnits(orgUnit)
             .orgUnitMode(SELECTED)
-            .trackedEntityUids(Set.of("QS6w44flWAf", "dUE514NMOlo"))
-            .trackedEntityTypeUid(trackedEntityType.getUid())
+            .trackedEntities(UID.of("QS6w44flWAf", "dUE514NMOlo"))
+            .trackedEntityType(trackedEntityType)
             .orderBy("inactive", SortDirection.ASC)
             .build();
 
@@ -567,72 +595,92 @@ class OrderAndPaginationExporterTest extends TrackerTest {
   }
 
   @Test
-  void shouldReturnPaginatedEnrollmentsGivenNonDefaultPageSize()
-      throws ForbiddenException, BadRequestException, NotFoundException {
+  void shouldOrderEnrollmentsByStatusAndByDefaultOrder()
+      throws ForbiddenException, BadRequestException {
+    List<String> expected =
+        Stream.of(get(Enrollment.class, "HDWTYSYkICe"), get(Enrollment.class, "GYWSSZunTLk"))
+            .sorted(Comparator.comparing(Enrollment::getId).reversed()) // reversed = desc
+            .map(Enrollment::getUid)
+            .toList();
+
     EnrollmentOperationParams operationParams =
         EnrollmentOperationParams.builder()
-            .orgUnitUids(Set.of(orgUnit.getUid()))
+            .orgUnits(get(OrganisationUnit.class, "DiszpKrYNg8"))
+            .orgUnitMode(SELECTED)
+            .enrollments(UID.of("HDWTYSYkICe", "GYWSSZunTLk"))
+            .orderBy("status", SortDirection.DESC)
+            .build();
+
+    List<String> actual = getEnrollments(operationParams);
+
+    assertEquals(expected, actual);
+  }
+
+  @Test
+  void shouldReturnPaginatedEnrollmentsGivenNonDefaultPageSize()
+      throws ForbiddenException, BadRequestException {
+    EnrollmentOperationParams operationParams =
+        EnrollmentOperationParams.builder()
+            .orgUnits(orgUnit)
             .orgUnitMode(SELECTED)
             .orderBy("enrollmentDate", SortDirection.ASC)
             .build();
 
-    Page<Enrollment> firstPage =
-        enrollmentService.getEnrollments(operationParams, new PageParams(1, 1, false));
+    Page<String> firstPage =
+        enrollmentService
+            .findEnrollments(operationParams, PageParams.single())
+            .withMappedItems(IdentifiableObject::getUid);
 
-    assertAll(
-        "first page",
-        () -> assertPage(1, 1, firstPage),
-        () -> assertEquals(List.of("nxP7UnKhomJ"), uids(firstPage.getItems())));
+    assertEquals(new Page<>(List.of("nxP7UnKhomJ"), 1, 1, null, null, 2), firstPage, "first page");
 
-    Page<Enrollment> secondPage =
-        enrollmentService.getEnrollments(operationParams, new PageParams(2, 1, false));
+    Page<String> secondPage =
+        enrollmentService
+            .findEnrollments(operationParams, new PageParams(2, 1, false))
+            .withMappedItems(IdentifiableObject::getUid);
 
-    assertAll(
-        "second page is last page",
-        () -> assertPage(2, 1, secondPage),
-        () -> assertEquals(List.of("TvctPPhpD8z"), uids(secondPage.getItems())));
+    assertEquals(
+        new Page<>(List.of("TvctPPhpD8z"), 2, 1, null, 1, null), secondPage, "second (last) page");
 
     Page<Enrollment> thirdPage =
-        enrollmentService.getEnrollments(operationParams, new PageParams(3, 1, false));
+        enrollmentService.findEnrollments(operationParams, new PageParams(3, 1, false));
 
-    assertIsEmpty(thirdPage.getItems());
+    assertEquals(new Page<>(List.of(), 3, 1, null, 2, null), thirdPage, "past the last page");
   }
 
   @Test
   void shouldReturnPaginatedEnrollmentsGivenNonDefaultPageSizeAndTotalPages()
-      throws ForbiddenException, BadRequestException, NotFoundException {
+      throws ForbiddenException, BadRequestException {
     EnrollmentOperationParams operationParams =
         EnrollmentOperationParams.builder()
-            .orgUnitUids(Set.of(orgUnit.getUid()))
+            .orgUnits(orgUnit)
             .orgUnitMode(SELECTED)
             .orderBy("enrollmentDate", SortDirection.ASC)
             .build();
 
-    Page<Enrollment> firstPage =
-        enrollmentService.getEnrollments(operationParams, new PageParams(1, 1, true));
+    Page<String> firstPage =
+        enrollmentService
+            .findEnrollments(operationParams, new PageParams(1, 1, true))
+            .withMappedItems(IdentifiableObject::getUid);
 
-    assertAll(
-        "first page",
-        () -> assertPage(1, 1, 2, firstPage),
-        () -> assertEquals(List.of("nxP7UnKhomJ"), uids(firstPage.getItems())));
+    assertEquals(new Page<>(List.of("nxP7UnKhomJ"), 1, 1, 2L, null, 2), firstPage, "first page");
 
-    Page<Enrollment> secondPage =
-        enrollmentService.getEnrollments(operationParams, new PageParams(2, 1, true));
+    Page<String> secondPage =
+        enrollmentService
+            .findEnrollments(operationParams, new PageParams(2, 1, true))
+            .withMappedItems(IdentifiableObject::getUid);
 
-    assertAll(
-        "second (last) page",
-        () -> assertPage(2, 1, 2, secondPage),
-        () -> assertEquals(List.of("TvctPPhpD8z"), uids(secondPage.getItems())));
+    assertEquals(
+        new Page<>(List.of("TvctPPhpD8z"), 2, 1, 2L, 1, null), secondPage, "second (last) page");
 
     Page<Enrollment> thirdPage =
-        enrollmentService.getEnrollments(operationParams, new PageParams(3, 1, true));
+        enrollmentService.findEnrollments(operationParams, new PageParams(3, 1, true));
 
-    assertIsEmpty(thirdPage.getItems());
+    assertEquals(new Page<>(List.of(), 3, 1, 2L, 2, null), thirdPage, "past the last page");
   }
 
   @Test
   void shouldOrderEnrollmentsByPrimaryKeyDescByDefault()
-      throws ForbiddenException, BadRequestException, NotFoundException {
+      throws ForbiddenException, BadRequestException {
     Enrollment nxP7UnKhomJ = get(Enrollment.class, "nxP7UnKhomJ");
     Enrollment TvctPPhpD8z = get(Enrollment.class, "TvctPPhpD8z");
     List<String> expected =
@@ -642,10 +690,7 @@ class OrderAndPaginationExporterTest extends TrackerTest {
             .toList();
 
     EnrollmentOperationParams params =
-        EnrollmentOperationParams.builder()
-            .orgUnitUids(Set.of(orgUnit.getUid()))
-            .orgUnitMode(SELECTED)
-            .build();
+        EnrollmentOperationParams.builder().orgUnits(orgUnit).orgUnitMode(SELECTED).build();
 
     List<String> enrollments = getEnrollments(params);
 
@@ -653,11 +698,10 @@ class OrderAndPaginationExporterTest extends TrackerTest {
   }
 
   @Test
-  void shouldOrderEnrollmentsByEnrolledAtAsc()
-      throws ForbiddenException, BadRequestException, NotFoundException {
+  void shouldOrderEnrollmentsByEnrolledAtAsc() throws ForbiddenException, BadRequestException {
     EnrollmentOperationParams params =
         EnrollmentOperationParams.builder()
-            .orgUnitUids(Set.of(orgUnit.getUid()))
+            .orgUnits(orgUnit)
             .orgUnitMode(SELECTED)
             .orderBy("enrollmentDate", SortDirection.ASC)
             .build();
@@ -668,11 +712,10 @@ class OrderAndPaginationExporterTest extends TrackerTest {
   }
 
   @Test
-  void shouldOrderEnrollmentsByEnrolledAtDesc()
-      throws ForbiddenException, BadRequestException, NotFoundException {
+  void shouldOrderEnrollmentsByEnrolledAtDesc() throws ForbiddenException, BadRequestException {
     EnrollmentOperationParams params =
         EnrollmentOperationParams.builder()
-            .orgUnitUids(Set.of(orgUnit.getUid()))
+            .orgUnits(orgUnit)
             .orgUnitMode(SELECTED)
             .orderBy("enrollmentDate", SortDirection.DESC)
             .build();
@@ -683,103 +726,98 @@ class OrderAndPaginationExporterTest extends TrackerTest {
   }
 
   @Test
-  void shouldReturnPaginatedEventsWithNotesGivenNonDefaultPageSize()
-      throws ForbiddenException, BadRequestException, NotFoundException {
+  void shouldOrderEventsByStatusAndByDefaultOrder() throws ForbiddenException, BadRequestException {
+    List<String> expected =
+        Stream.of(
+                get(Event.class, "ck7DzdxqLqA"),
+                get(Event.class, "kWjSezkXHVp"),
+                get(Event.class, "OTmjvJDn0Fu"))
+            .sorted(Comparator.comparing(Event::getId).reversed()) // reversed = desc
+            .map(Event::getUid)
+            .toList();
+
     EventOperationParams operationParams =
         eventParamsBuilder
-            .orgUnitUid(orgUnit.getUid())
-            .events(Set.of("pTzf9KYMk72", "D9PbzJY8bJM"))
-            .orderBy("occurredDate", SortDirection.DESC)
+            .orgUnit(get(OrganisationUnit.class, "DiszpKrYNg8"))
+            .events(UID.of("ck7DzdxqLqA", "kWjSezkXHVp", "OTmjvJDn0Fu"))
+            .orderBy("status", SortDirection.DESC)
             .build();
 
-    Page<Event> firstPage = eventService.getEvents(operationParams, new PageParams(1, 1, false));
+    List<String> actual = getEvents(operationParams);
 
-    assertAll(
-        "first page",
-        () -> assertPage(1, 1, firstPage),
-        () -> assertEquals(List.of("D9PbzJY8bJM"), uids(firstPage)));
-
-    Page<Event> secondPage = eventService.getEvents(operationParams, new PageParams(2, 1, false));
-
-    assertAll(
-        "second page is the last page",
-        () -> assertPage(2, 1, secondPage),
-        () -> assertEquals(List.of("pTzf9KYMk72"), uids(secondPage)));
-
-    assertIsEmpty(getEvents(operationParams, new PageParams(3, 3, false)));
+    assertEquals(expected, actual);
   }
 
   @Test
-  void shouldReturnPaginatedEventsWithTotalPages()
-      throws ForbiddenException, BadRequestException, NotFoundException {
-    EventOperationParams params =
+  void shouldReturnPaginatedEventsWithNotesGivenNonDefaultPageSize()
+      throws ForbiddenException, BadRequestException {
+    EventOperationParams operationParams =
         eventParamsBuilder
-            .orgUnitUid(orgUnit.getUid())
-            .programStageUid(programStage.getUid())
+            .orgUnit(orgUnit)
+            .events(UID.of("pTzf9KYMk72", "D9PbzJY8bJM"))
+            .orderBy("occurredDate", SortDirection.DESC)
             .build();
 
-    Page<Event> page = eventService.getEvents(params, new PageParams(1, 2, true));
+    Page<String> firstPage =
+        eventService
+            .findEvents(operationParams, PageParams.single())
+            .withMappedItems(IdentifiableObject::getUid);
 
-    assertAll(
-        "page with total counts",
-        () -> assertPage(1, 2, 2, page),
-        () -> assertEquals(List.of("D9PbzJY8bJM", "pTzf9KYMk72"), uids(page)));
+    assertEquals(new Page<>(List.of("D9PbzJY8bJM"), 1, 1, null, null, 2), firstPage, "first page");
+
+    Page<String> secondPage =
+        eventService
+            .findEvents(operationParams, new PageParams(2, 1, true))
+            .withMappedItems(IdentifiableObject::getUid);
+
+    assertEquals(
+        new Page<>(List.of("pTzf9KYMk72"), 2, 1, 2L, 1, null), secondPage, "second (last) page");
+
+    Page<Event> thirdPage = eventService.findEvents(operationParams, new PageParams(3, 1, false));
+
+    assertEquals(new Page<>(List.of(), 3, 1, null, 2, null), thirdPage, "past the last page");
   }
 
   @Test
   void shouldReturnPaginatedPublicEventsWithMultipleCategoryOptionsGivenNonDefaultPageSize()
-      throws ForbiddenException, BadRequestException, NotFoundException {
+      throws ForbiddenException, BadRequestException {
     OrganisationUnit orgUnit = get(OrganisationUnit.class, "DiszpKrYNg8");
     Program program = get(Program.class, "iS7eutanDry");
 
     EventOperationParams operationParams =
         eventParamsBuilder
-            .orgUnitUid(orgUnit.getUid())
-            .programUid(program.getUid())
+            .orgUnit(orgUnit)
+            .program(program)
             .orderBy("occurredDate", SortDirection.DESC)
             .build();
 
-    Page<Event> firstPage = eventService.getEvents(operationParams, new PageParams(1, 3, false));
+    Page<String> firstPage =
+        eventService
+            .findEvents(operationParams, new PageParams(1, 3, false))
+            .withMappedItems(IdentifiableObject::getUid);
 
-    assertAll(
-        "first page",
-        () -> assertPage(1, 3, firstPage),
-        () -> assertEquals(List.of("ck7DzdxqLqA", "OTmjvJDn0Fu", "kWjSezkXHVp"), uids(firstPage)));
+    assertEquals(
+        new Page<>(List.of("ck7DzdxqLqA", "OTmjvJDn0Fu", "kWjSezkXHVp"), 1, 3, null, null, 2),
+        firstPage,
+        "first page");
 
-    Page<Event> secondPage = eventService.getEvents(operationParams, new PageParams(2, 3, false));
+    Page<String> secondPage =
+        eventService
+            .findEvents(operationParams, new PageParams(2, 3, true))
+            .withMappedItems(IdentifiableObject::getUid);
 
-    assertAll(
-        "second page is the last page",
-        () -> assertPage(2, 3, secondPage),
-        () -> assertEquals(List.of("lumVtWwwy0O", "QRYjLTiJTrA", "cadc5eGj0j7"), uids(secondPage)));
+    assertEquals(
+        new Page<>(List.of("lumVtWwwy0O", "QRYjLTiJTrA", "cadc5eGj0j7"), 2, 3, 6L, 1, null),
+        secondPage,
+        "second (last) page");
 
-    assertIsEmpty(getEvents(operationParams, new PageParams(3, 3, false)));
+    Page<Event> thirdPage = eventService.findEvents(operationParams, new PageParams(3, 3, true));
+
+    assertEquals(new Page<>(List.of(), 3, 3, 6L, 2, null), thirdPage, "past the last page");
   }
 
   @Test
-  void shouldReturnPaginatedEventsWithMultipleCategoryOptionsGivenNonDefaultPageSizeAndTotalPages()
-      throws ForbiddenException, BadRequestException, NotFoundException {
-    OrganisationUnit orgUnit = get(OrganisationUnit.class, "DiszpKrYNg8");
-    Program program = get(Program.class, "iS7eutanDry");
-
-    EventOperationParams params =
-        eventParamsBuilder
-            .orgUnitUid(orgUnit.getUid())
-            .programUid(program.getUid())
-            .orderBy("occurredDate", SortDirection.DESC)
-            .build();
-
-    Page<Event> events = eventService.getEvents(params, new PageParams(1, 2, true));
-
-    assertAll(
-        "page with total counts",
-        () -> assertPage(1, 2, 6, events),
-        () -> assertEquals(List.of("ck7DzdxqLqA", "OTmjvJDn0Fu"), uids(events)));
-  }
-
-  @Test
-  void shouldOrderEventsByPrimaryKeyDescByDefault()
-      throws ForbiddenException, BadRequestException, NotFoundException {
+  void shouldOrderEventsByPrimaryKeyDescByDefault() throws ForbiddenException, BadRequestException {
     Event d9PbzJY8bJM = get(Event.class, "D9PbzJY8bJM");
     Event pTzf9KYMk72 = get(Event.class, "pTzf9KYMk72");
     List<String> expected =
@@ -788,7 +826,7 @@ class OrderAndPaginationExporterTest extends TrackerTest {
             .map(Event::getUid)
             .toList();
 
-    EventOperationParams params = eventParamsBuilder.orgUnitUid(orgUnit.getUid()).build();
+    EventOperationParams params = eventParamsBuilder.orgUnit(orgUnit).build();
 
     List<String> events = getEvents(params);
 
@@ -796,8 +834,7 @@ class OrderAndPaginationExporterTest extends TrackerTest {
   }
 
   @Test
-  void shouldOrderEventsByEnrollmentProgramUIDAsc()
-      throws ForbiddenException, BadRequestException, NotFoundException {
+  void shouldOrderEventsByEnrollmentProgramUIDAsc() throws ForbiddenException, BadRequestException {
     Event pTzf9KYMk72 =
         get(Event.class, "pTzf9KYMk72"); // enrolled in program BFcipDERJnf with registration
     Event QRYjLTiJTrA =
@@ -811,7 +848,7 @@ class OrderAndPaginationExporterTest extends TrackerTest {
     EventOperationParams params =
         eventParamsBuilder
             .orgUnitMode(ACCESSIBLE)
-            .events(Set.of("pTzf9KYMk72", "QRYjLTiJTrA"))
+            .events(UID.of("pTzf9KYMk72", "QRYjLTiJTrA"))
             .orderBy("enrollment.program.uid", SortDirection.ASC)
             .build();
 
@@ -822,7 +859,7 @@ class OrderAndPaginationExporterTest extends TrackerTest {
 
   @Test
   void shouldOrderEventsByEnrollmentProgramUIDDesc()
-      throws ForbiddenException, BadRequestException, NotFoundException {
+      throws ForbiddenException, BadRequestException {
     Event pTzf9KYMk72 =
         get(Event.class, "pTzf9KYMk72"); // enrolled in program BFcipDERJnf with registration
     Event QRYjLTiJTrA =
@@ -838,7 +875,7 @@ class OrderAndPaginationExporterTest extends TrackerTest {
     EventOperationParams params =
         eventParamsBuilder
             .orgUnitMode(ACCESSIBLE)
-            .events(Set.of("pTzf9KYMk72", "QRYjLTiJTrA"))
+            .events(UID.of("pTzf9KYMk72", "QRYjLTiJTrA"))
             .orderBy("enrollment.program.uid", SortDirection.DESC)
             .build();
 
@@ -848,11 +885,10 @@ class OrderAndPaginationExporterTest extends TrackerTest {
   }
 
   @Test
-  void shouldOrderEventsByAttributeAsc()
-      throws ForbiddenException, BadRequestException, NotFoundException {
+  void shouldOrderEventsByAttributeAsc() throws ForbiddenException, BadRequestException {
     EventOperationParams params =
         eventParamsBuilder
-            .orgUnitUid(orgUnit.getUid())
+            .orgUnit(orgUnit)
             .orderBy(UID.of("toUpdate000"), SortDirection.ASC)
             .build();
 
@@ -862,11 +898,10 @@ class OrderAndPaginationExporterTest extends TrackerTest {
   }
 
   @Test
-  void shouldOrderEventsByAttributeDesc()
-      throws ForbiddenException, BadRequestException, NotFoundException {
+  void shouldOrderEventsByAttributeDesc() throws ForbiddenException, BadRequestException {
     EventOperationParams params =
         eventParamsBuilder
-            .orgUnitUid(orgUnit.getUid())
+            .orgUnit(orgUnit)
             .orderBy(UID.of("toUpdate000"), SortDirection.DESC)
             .build();
 
@@ -877,12 +912,12 @@ class OrderAndPaginationExporterTest extends TrackerTest {
 
   @Test
   void shouldOrderEventsByAttributeAndNotFilterOutEventsWithATrackedEntityWithoutThatAttribute()
-      throws ForbiddenException, BadRequestException, NotFoundException {
+      throws ForbiddenException, BadRequestException {
     EventOperationParams params =
         eventParamsBuilder
-            .orgUnitUid(orgUnit.getUid())
+            .orgUnit(orgUnit)
             .events(
-                Set.of(
+                UID.of(
                     "pTzf9KYMk72",
                     "D9PbzJY8bJM")) // EV pTzf9KYMk72 => TE QS6w44flWAf without attribute
             // notUpdated0
@@ -895,11 +930,10 @@ class OrderAndPaginationExporterTest extends TrackerTest {
   }
 
   @Test
-  void shouldOrderEventsByMultipleAttributesDesc()
-      throws ForbiddenException, BadRequestException, NotFoundException {
+  void shouldOrderEventsByMultipleAttributesDesc() throws ForbiddenException, BadRequestException {
     EventOperationParams params =
         eventParamsBuilder
-            .orgUnitUid(orgUnit.getUid())
+            .orgUnit(orgUnit)
             .orderBy(UID.of("toDelete000"), SortDirection.DESC)
             .orderBy(UID.of("toUpdate000"), SortDirection.DESC)
             .build();
@@ -910,58 +944,60 @@ class OrderAndPaginationExporterTest extends TrackerTest {
   }
 
   @Test
-  void shouldOrderEventsByMultipleAttributesAsc()
-      throws ForbiddenException, BadRequestException, NotFoundException {
+  void shouldOrderEventsByMultipleAttributesAsc() throws ForbiddenException, BadRequestException {
     EventOperationParams params =
         eventParamsBuilder
-            .orgUnitUid(orgUnit.getUid())
+            .orgUnit(orgUnit)
             .orderBy(UID.of("toDelete000"), SortDirection.DESC)
             .orderBy(UID.of("toUpdate000"), SortDirection.ASC)
             .build();
 
-    List<Event> events = eventService.getEvents(params);
+    List<Event> events = eventService.findEvents(params);
 
     assertEquals(List.of("D9PbzJY8bJM", "pTzf9KYMk72"), uids(events));
     List<String> trackedEntities =
-        events.stream()
-            .map(event -> event.getEnrollment().getTrackedEntity().getUid())
-            .collect(Collectors.toList());
+        events.stream().map(event -> event.getEnrollment().getTrackedEntity().getUid()).toList();
     assertEquals(List.of("dUE514NMOlo", "QS6w44flWAf"), trackedEntities);
   }
 
   @Test
   void shouldReturnPaginatedEventsOrderedByMultipleAttributesWhenGivenNonDefaultPageSize()
-      throws ForbiddenException, BadRequestException, NotFoundException {
+      throws ForbiddenException, BadRequestException {
     EventOperationParams operationParams =
         eventParamsBuilder
-            .orgUnitUid(orgUnit.getUid())
+            .orgUnit(orgUnit)
             .orderBy(UID.of("toDelete000"), SortDirection.DESC)
             .orderBy(UID.of("toUpdate000"), SortDirection.ASC)
             .build();
 
-    Page<Event> firstPage = eventService.getEvents(operationParams, new PageParams(1, 1, false));
+    Page<String> firstPage =
+        eventService
+            .findEvents(operationParams, PageParams.single())
+            .withMappedItems(IdentifiableObject::getUid);
 
-    assertAll(
-        "first page",
-        () -> assertPage(1, 1, firstPage),
-        () -> assertEquals(List.of("D9PbzJY8bJM"), uids(firstPage)));
+    assertEquals(new Page<>(List.of("D9PbzJY8bJM"), 1, 1, null, null, 2), firstPage, "first page");
 
-    Page<Event> secondPage = eventService.getEvents(operationParams, new PageParams(2, 1, false));
+    Page<String> secondPage =
+        eventService
+            .findEvents(operationParams, new PageParams(2, 1, false))
+            .withMappedItems(IdentifiableObject::getUid);
 
-    assertAll(
-        "second (last) page",
-        () -> assertPage(2, 1, secondPage),
-        () -> assertEquals(List.of("pTzf9KYMk72"), uids(secondPage)));
+    assertEquals(
+        new Page<>(List.of("pTzf9KYMk72"), 2, 1, null, 1, null), secondPage, "second (last) page");
 
-    assertIsEmpty(getEvents(operationParams, new PageParams(3, 3, false)));
+    Page<String> thirdPage =
+        eventService
+            .findEvents(operationParams, new PageParams(3, 3, false))
+            .withMappedItems(IdentifiableObject::getUid);
+
+    assertEquals(new Page<>(List.of(), 3, 3, null, 2, null), thirdPage, "past the last page");
   }
 
   @Test
-  void shouldOrderEventsByProgramStageUidDesc()
-      throws ForbiddenException, BadRequestException, NotFoundException {
+  void shouldOrderEventsByProgramStageUidDesc() throws ForbiddenException, BadRequestException {
     EventOperationParams params =
         eventParamsBuilder
-            .orgUnitUid("uoNW0E3xXUy")
+            .orgUnit(UID.of("uoNW0E3xXUy"))
             .orderBy("programStage.uid", SortDirection.DESC)
             .build();
 
@@ -971,11 +1007,10 @@ class OrderAndPaginationExporterTest extends TrackerTest {
   }
 
   @Test
-  void shouldOrderEventsByProgramStageUidAsc()
-      throws ForbiddenException, BadRequestException, NotFoundException {
+  void shouldOrderEventsByProgramStageUidAsc() throws ForbiddenException, BadRequestException {
     EventOperationParams params =
         eventParamsBuilder
-            .orgUnitUid("uoNW0E3xXUy")
+            .orgUnit(UID.of("uoNW0E3xXUy"))
             .orderBy("programStage.uid", SortDirection.ASC)
             .build();
 
@@ -985,11 +1020,10 @@ class OrderAndPaginationExporterTest extends TrackerTest {
   }
 
   @Test
-  void shouldOrderEventsByTrackedEntityUidDesc()
-      throws ForbiddenException, BadRequestException, NotFoundException {
+  void shouldOrderEventsByTrackedEntityUidDesc() throws ForbiddenException, BadRequestException {
     EventOperationParams params =
         eventParamsBuilder
-            .orgUnitUid(orgUnit.getUid())
+            .orgUnit(orgUnit)
             .orderBy("enrollment.trackedEntity.uid", SortDirection.DESC)
             .build();
 
@@ -999,11 +1033,10 @@ class OrderAndPaginationExporterTest extends TrackerTest {
   }
 
   @Test
-  void shouldOrderEventsByTrackedEntityUidAsc()
-      throws ForbiddenException, BadRequestException, NotFoundException {
+  void shouldOrderEventsByTrackedEntityUidAsc() throws ForbiddenException, BadRequestException {
     EventOperationParams params =
         eventParamsBuilder
-            .orgUnitUid(orgUnit.getUid())
+            .orgUnit(orgUnit)
             .orderBy("enrollment.trackedEntity.uid", SortDirection.ASC)
             .build();
 
@@ -1014,11 +1047,11 @@ class OrderAndPaginationExporterTest extends TrackerTest {
 
   @Test
   void shouldOrderEventsByAttributeOptionComboUidDesc()
-      throws ForbiddenException, BadRequestException, NotFoundException {
+      throws ForbiddenException, BadRequestException {
     EventOperationParams params =
         eventParamsBuilder
-            .orgUnitUid("DiszpKrYNg8")
-            .events(Set.of("ck7DzdxqLqA", "lumVtWwwy0O", "cadc5eGj0j7"))
+            .orgUnit(UID.of("DiszpKrYNg8"))
+            .events(UID.of("ck7DzdxqLqA", "lumVtWwwy0O", "cadc5eGj0j7"))
             .orderBy("attributeOptionCombo.uid", SortDirection.DESC)
             .build();
 
@@ -1029,11 +1062,11 @@ class OrderAndPaginationExporterTest extends TrackerTest {
 
   @Test
   void shouldOrderEventsByAttributeOptionComboUidAsc()
-      throws ForbiddenException, BadRequestException, NotFoundException {
+      throws ForbiddenException, BadRequestException {
     EventOperationParams params =
         eventParamsBuilder
-            .orgUnitUid("DiszpKrYNg8")
-            .events(Set.of("ck7DzdxqLqA", "lumVtWwwy0O", "cadc5eGj0j7"))
+            .orgUnit(UID.of("DiszpKrYNg8"))
+            .events(UID.of("ck7DzdxqLqA", "lumVtWwwy0O", "cadc5eGj0j7"))
             .orderBy("attributeOptionCombo.uid", SortDirection.ASC)
             .build();
 
@@ -1043,13 +1076,9 @@ class OrderAndPaginationExporterTest extends TrackerTest {
   }
 
   @Test
-  void shouldOrderEventsByOccurredAtDesc()
-      throws ForbiddenException, BadRequestException, NotFoundException {
+  void shouldOrderEventsByOccurredAtDesc() throws ForbiddenException, BadRequestException {
     EventOperationParams params =
-        eventParamsBuilder
-            .orgUnitUid(orgUnit.getUid())
-            .orderBy("occurredDate", SortDirection.DESC)
-            .build();
+        eventParamsBuilder.orgUnit(orgUnit).orderBy("occurredDate", SortDirection.DESC).build();
 
     List<String> events = getEvents(params);
 
@@ -1057,13 +1086,9 @@ class OrderAndPaginationExporterTest extends TrackerTest {
   }
 
   @Test
-  void shouldOrderEventsByOccurredAtAsc()
-      throws ForbiddenException, BadRequestException, NotFoundException {
+  void shouldOrderEventsByOccurredAtAsc() throws ForbiddenException, BadRequestException {
     EventOperationParams params =
-        eventParamsBuilder
-            .orgUnitUid(orgUnit.getUid())
-            .orderBy("occurredDate", SortDirection.ASC)
-            .build();
+        eventParamsBuilder.orgUnit(orgUnit).orderBy("occurredDate", SortDirection.ASC).build();
 
     List<String> events = getEvents(params);
 
@@ -1072,11 +1097,11 @@ class OrderAndPaginationExporterTest extends TrackerTest {
 
   @Test
   void shouldOrderEventsByCreatedAtClientInAscOrder()
-      throws ForbiddenException, BadRequestException, NotFoundException {
+      throws ForbiddenException, BadRequestException {
     EventOperationParams params =
         eventParamsBuilder
-            .orgUnitUid(orgUnit.getUid())
-            .programStageUid(programStage.getUid())
+            .orgUnit(orgUnit)
+            .programStage(programStage)
             .orderBy("createdAtClient", SortDirection.ASC)
             .build();
 
@@ -1087,11 +1112,11 @@ class OrderAndPaginationExporterTest extends TrackerTest {
 
   @Test
   void shouldOrderEventsByCreatedAtClientInDescOrder()
-      throws ForbiddenException, BadRequestException, NotFoundException {
+      throws ForbiddenException, BadRequestException {
     EventOperationParams params =
         eventParamsBuilder
-            .orgUnitUid(orgUnit.getUid())
-            .programStageUid(programStage.getUid())
+            .orgUnit(orgUnit)
+            .programStage(programStage)
             .orderBy("createdAtClient", SortDirection.DESC)
             .build();
 
@@ -1102,11 +1127,11 @@ class OrderAndPaginationExporterTest extends TrackerTest {
 
   @Test
   void shouldOrderEventsByUpdatedAtClientInAscOrder()
-      throws ForbiddenException, BadRequestException, NotFoundException {
+      throws ForbiddenException, BadRequestException {
     EventOperationParams params =
         eventParamsBuilder
-            .orgUnitUid(orgUnit.getUid())
-            .programStageUid(programStage.getUid())
+            .orgUnit(orgUnit)
+            .programStage(programStage)
             .orderBy("lastUpdatedAtClient", SortDirection.ASC)
             .build();
 
@@ -1117,11 +1142,11 @@ class OrderAndPaginationExporterTest extends TrackerTest {
 
   @Test
   void shouldOrderEventsByUpdatedAtClientInDescOrder()
-      throws ForbiddenException, BadRequestException, NotFoundException {
+      throws ForbiddenException, BadRequestException {
     EventOperationParams params =
         eventParamsBuilder
-            .orgUnitUid(orgUnit.getUid())
-            .programStageUid(programStage.getUid())
+            .orgUnit(orgUnit)
+            .programStage(programStage)
             .orderBy("lastUpdatedAtClient", SortDirection.DESC)
             .build();
 
@@ -1132,10 +1157,10 @@ class OrderAndPaginationExporterTest extends TrackerTest {
 
   @Test
   void shouldOrderEventsRespectingOrderWhenAttributeOrderSuppliedBeforeOrderParam()
-      throws ForbiddenException, BadRequestException, NotFoundException {
+      throws ForbiddenException, BadRequestException {
     EventOperationParams params =
         eventParamsBuilder
-            .orgUnitUid(orgUnit.getUid())
+            .orgUnit(orgUnit)
             .orderBy(UID.of("toUpdate000"), SortDirection.ASC)
             .orderBy("enrollment.enrollmentDate", SortDirection.ASC)
             .build();
@@ -1147,10 +1172,10 @@ class OrderAndPaginationExporterTest extends TrackerTest {
 
   @Test
   void shouldOrderEventsRespectingOrderWhenOrderParamSuppliedBeforeAttributeOrder()
-      throws ForbiddenException, BadRequestException, NotFoundException {
+      throws ForbiddenException, BadRequestException {
     EventOperationParams params =
         eventParamsBuilder
-            .orgUnitUid(orgUnit.getUid())
+            .orgUnit(orgUnit)
             .orderBy("enrollment.enrollmentDate", SortDirection.DESC)
             .orderBy(UID.of("toUpdate000"), SortDirection.DESC)
             .build();
@@ -1162,10 +1187,10 @@ class OrderAndPaginationExporterTest extends TrackerTest {
 
   @Test
   void shouldOrderEventsRespectingOrderWhenDataElementSuppliedBeforeOrderParam()
-      throws ForbiddenException, BadRequestException, NotFoundException {
+      throws ForbiddenException, BadRequestException {
     EventOperationParams params =
         eventParamsBuilder
-            .orgUnitUid(orgUnit.getUid())
+            .orgUnit(orgUnit)
             .orderBy("scheduledDate", SortDirection.DESC)
             .orderBy(UID.of("DATAEL00006"), SortDirection.DESC)
             .orderBy("enrollment.enrollmentDate", SortDirection.DESC)
@@ -1178,10 +1203,10 @@ class OrderAndPaginationExporterTest extends TrackerTest {
 
   @Test
   void shouldOrderEventsRespectingOrderWhenOrderParamSuppliedBeforeDataElement()
-      throws ForbiddenException, BadRequestException, NotFoundException {
+      throws ForbiddenException, BadRequestException {
     EventOperationParams params =
         eventParamsBuilder
-            .orgUnitUid(orgUnit.getUid())
+            .orgUnit(orgUnit)
             .orderBy("enrollment.enrollmentDate", SortDirection.DESC)
             .orderBy(UID.of("DATAEL00006"), SortDirection.DESC)
             .build();
@@ -1193,12 +1218,12 @@ class OrderAndPaginationExporterTest extends TrackerTest {
 
   @Test
   void shouldOrderEventsByDataElementAndNotFilterOutEventsWithoutThatDataElement()
-      throws ForbiddenException, BadRequestException, NotFoundException {
+      throws ForbiddenException, BadRequestException {
     EventOperationParams params =
         eventParamsBuilder
-            .orgUnitUid(orgUnit.getUid())
+            .orgUnit(orgUnit)
             .events(
-                Set.of(
+                UID.of(
                     "pTzf9KYMk72", // EV pTzf9KYMk72 without data element DATAEL00002
                     "D9PbzJY8bJM"))
             // notUpdated0
@@ -1233,10 +1258,10 @@ class OrderAndPaginationExporterTest extends TrackerTest {
   @MethodSource("orderByFieldInDescendingOrderWhenModeSelected")
   void shouldOrderEventsByFieldInDescendingOrderWhenModeSelected(
       String field, String firstEvent, String secondEvent)
-      throws ForbiddenException, BadRequestException, NotFoundException {
+      throws ForbiddenException, BadRequestException {
 
     eventParamsBuilder.orgUnitMode(SELECTED);
-    eventParamsBuilder.orgUnitUid(orgUnit.getUid());
+    eventParamsBuilder.orgUnit(orgUnit);
     eventParamsBuilder.orderBy(field, SortDirection.DESC);
 
     List<String> events = getEvents(eventParamsBuilder.build());
@@ -1247,10 +1272,10 @@ class OrderAndPaginationExporterTest extends TrackerTest {
   @MethodSource("orderByFieldInAscendingOrderWhenModeSelected")
   void shouldOrderEventsByFieldInAscendingOrderWhenModeSelected(
       String field, String firstEvent, String secondEvent)
-      throws ForbiddenException, BadRequestException, NotFoundException {
+      throws ForbiddenException, BadRequestException {
 
     eventParamsBuilder.orgUnitMode(SELECTED);
-    eventParamsBuilder.orgUnitUid(orgUnit.getUid());
+    eventParamsBuilder.orgUnit(orgUnit);
     eventParamsBuilder.orderBy(field, SortDirection.ASC);
 
     List<String> events = getEvents(eventParamsBuilder.build());
@@ -1279,10 +1304,10 @@ class OrderAndPaginationExporterTest extends TrackerTest {
   @MethodSource("orderByFieldInDescendingOrderWhenModeDescendants")
   void shouldOrderByFieldInDescendingOrderWhenModeDescendants(
       String field, String firstEvent, String secondEvent)
-      throws ForbiddenException, BadRequestException, NotFoundException {
+      throws ForbiddenException, BadRequestException {
 
     eventParamsBuilder.orgUnitMode(DESCENDANTS);
-    eventParamsBuilder.orgUnitUid("RojfDTBhoGC");
+    eventParamsBuilder.orgUnit(UID.of("RojfDTBhoGC"));
     eventParamsBuilder.orderBy(field, SortDirection.DESC);
 
     List<String> events = getEvents(eventParamsBuilder.build());
@@ -1293,10 +1318,10 @@ class OrderAndPaginationExporterTest extends TrackerTest {
   @MethodSource("orderByFieldInAscendingOrderWhenModeDescendants")
   void shouldOrderByFieldInAscendingOrderWhenModeDescendants(
       String field, String firstEvent, String secondEvent)
-      throws ForbiddenException, BadRequestException, NotFoundException {
+      throws ForbiddenException, BadRequestException {
 
     eventParamsBuilder.orgUnitMode(DESCENDANTS);
-    eventParamsBuilder.orgUnitUid("RojfDTBhoGC");
+    eventParamsBuilder.orgUnit(UID.of("RojfDTBhoGC"));
     eventParamsBuilder.orderBy(field, SortDirection.ASC);
 
     List<String> events = getEvents(eventParamsBuilder.build());
@@ -1304,8 +1329,29 @@ class OrderAndPaginationExporterTest extends TrackerTest {
   }
 
   @Test
+  void shouldOrderRelationshipsByCreatedAtClientAndByDefaultOrder()
+      throws ForbiddenException, BadRequestException, NotFoundException {
+    Relationship oLT07jKRu9e = get(Relationship.class, "fHn74P5T3r1");
+    Relationship yZxjxJli9mO = get(Relationship.class, "yZxjxJli9mO");
+    List<String> expected =
+        Stream.of(oLT07jKRu9e, yZxjxJli9mO)
+            .sorted(Comparator.comparing(Relationship::getId).reversed()) // reversed = desc
+            .map(Relationship::getUid)
+            .toList();
+
+    RelationshipOperationParams params =
+        RelationshipOperationParams.builder(TrackerType.TRACKED_ENTITY, UID.of("dUE514NMOlo"))
+            .orderBy("createdAtClient", SortDirection.DESC)
+            .build();
+
+    List<String> relationships = getRelationships(params);
+
+    assertEquals(expected, relationships);
+  }
+
+  @Test
   void shouldOrderRelationshipsByPrimaryKeyDescByDefault()
-      throws ForbiddenException, NotFoundException, BadRequestException {
+      throws ForbiddenException, BadRequestException, NotFoundException {
     Relationship oLT07jKRu9e = get(Relationship.class, "oLT07jKRu9e");
     Relationship yZxjxJli9mO = get(Relationship.class, "yZxjxJli9mO");
     List<String> expected =
@@ -1315,10 +1361,7 @@ class OrderAndPaginationExporterTest extends TrackerTest {
             .toList();
 
     RelationshipOperationParams params =
-        RelationshipOperationParams.builder()
-            .type(TrackerType.EVENT)
-            .identifier("pTzf9KYMk72")
-            .build();
+        RelationshipOperationParams.builder(TrackerType.EVENT, UID.of("pTzf9KYMk72")).build();
 
     List<String> relationships = getRelationships(params);
 
@@ -1327,11 +1370,9 @@ class OrderAndPaginationExporterTest extends TrackerTest {
 
   @Test
   void shouldOrderRelationshipsByUpdatedAtClientInDescOrder()
-      throws ForbiddenException, NotFoundException, BadRequestException {
+      throws ForbiddenException, BadRequestException, NotFoundException {
     RelationshipOperationParams params =
-        RelationshipOperationParams.builder()
-            .type(TrackerType.EVENT)
-            .identifier("pTzf9KYMk72")
+        RelationshipOperationParams.builder(TrackerType.EVENT, UID.of("pTzf9KYMk72"))
             .orderBy("createdAtClient", SortDirection.DESC)
             .build();
 
@@ -1342,11 +1383,9 @@ class OrderAndPaginationExporterTest extends TrackerTest {
 
   @Test
   void shouldOrderRelationshipsByUpdatedAtClientInAscOrder()
-      throws ForbiddenException, NotFoundException, BadRequestException {
+      throws ForbiddenException, BadRequestException, NotFoundException {
     RelationshipOperationParams params =
-        RelationshipOperationParams.builder()
-            .type(TrackerType.EVENT)
-            .identifier("pTzf9KYMk72")
+        RelationshipOperationParams.builder(TrackerType.EVENT, UID.of("pTzf9KYMk72"))
             .orderBy("createdAtClient", SortDirection.ASC)
             .build();
 
@@ -1357,7 +1396,7 @@ class OrderAndPaginationExporterTest extends TrackerTest {
 
   @Test
   void shouldReturnPaginatedRelationshipsGivenNonDefaultPageSize()
-      throws ForbiddenException, NotFoundException, BadRequestException {
+      throws ForbiddenException, BadRequestException, NotFoundException {
     // relationships can only be ordered by created date which is not under our control during
     // testing
     // pagination is tested using default order by primary key desc. We thus need to get the
@@ -1373,88 +1412,38 @@ class OrderAndPaginationExporterTest extends TrackerTest {
     String expectedOnPage2 = expected.get(1);
 
     RelationshipOperationParams params =
-        RelationshipOperationParams.builder()
-            .type(TrackerType.EVENT)
-            .identifier("pTzf9KYMk72")
-            .build();
+        RelationshipOperationParams.builder(TrackerType.EVENT, UID.of("pTzf9KYMk72")).build();
 
-    Page<Relationship> firstPage =
-        relationshipService.getRelationships(params, new PageParams(1, 1, false));
+    Page<String> firstPage =
+        relationshipService
+            .findRelationships(params, PageParams.single())
+            .withMappedItems(IdentifiableObject::getUid);
 
-    assertAll(
-        "first page",
-        () -> assertPage(1, 1, firstPage),
-        () -> assertEquals(List.of(expectedOnPage1), uids(firstPage)));
+    assertEquals(
+        new Page<>(List.of(expectedOnPage1), 1, 1, null, null, 2), firstPage, "first page");
 
-    Page<Relationship> secondPage =
-        relationshipService.getRelationships(params, new PageParams(2, 1, false));
+    Page<String> secondPage =
+        relationshipService
+            .findRelationships(params, new PageParams(2, 1, true))
+            .withMappedItems(IdentifiableObject::getUid);
 
-    assertAll(
-        "second (last) page",
-        () -> assertPage(2, 1, secondPage),
-        () -> assertEquals(List.of(expectedOnPage2), uids(secondPage)));
+    assertEquals(
+        new Page<>(List.of(expectedOnPage2), 2, 1, 2L, 1, null), secondPage, "second (last) page");
 
     Page<Relationship> thirdPage =
-        relationshipService.getRelationships(params, new PageParams(3, 1, false));
+        relationshipService.findRelationships(params, new PageParams(3, 1, true));
 
-    assertIsEmpty(thirdPage.getItems());
-  }
-
-  @Test
-  void shouldReturnPaginatedRelationshipsGivenNonDefaultPageSizeAndTotalPages()
-      throws ForbiddenException, NotFoundException, BadRequestException {
-    // relationships can only be ordered by created date which is not under our control during
-    // testing
-    // pagination is tested using default order by primary key desc. We thus need to get the
-    // expected order of the pages beforehand.
-    Relationship oLT07jKRu9e = get(Relationship.class, "oLT07jKRu9e");
-    Relationship yZxjxJli9mO = get(Relationship.class, "yZxjxJli9mO");
-    List<String> expected =
-        Stream.of(oLT07jKRu9e, yZxjxJli9mO)
-            .sorted(Comparator.comparing(Relationship::getId).reversed()) // reversed = desc
-            .map(Relationship::getUid)
-            .toList();
-    String expectedOnPage1 = expected.get(0);
-    String expectedOnPage2 = expected.get(1);
-
-    RelationshipOperationParams params =
-        RelationshipOperationParams.builder()
-            .type(TrackerType.EVENT)
-            .identifier("pTzf9KYMk72")
-            .build();
-
-    Page<Relationship> firstPage =
-        relationshipService.getRelationships(params, new PageParams(1, 1, true));
-
-    assertAll(
-        "first page",
-        () -> assertPage(1, 1, 2, firstPage),
-        () -> assertEquals(List.of(expectedOnPage1), uids(firstPage)));
-
-    Page<Relationship> secondPage =
-        relationshipService.getRelationships(params, new PageParams(2, 1, true));
-
-    assertAll(
-        "second (last) page",
-        () -> assertPage(2, 1, 2, secondPage),
-        () -> assertEquals(List.of(expectedOnPage2), uids(secondPage)));
-
-    Page<Relationship> thirdPage =
-        relationshipService.getRelationships(params, new PageParams(3, 1, true));
-
-    assertIsEmpty(thirdPage.getItems());
+    assertEquals(new Page<>(List.of(), 3, 1, 2L, 2, null), thirdPage, "past the last page");
   }
 
   @Test
   void shouldOrderRelationshipsByCreatedAsc()
-      throws ForbiddenException, NotFoundException, BadRequestException {
+      throws ForbiddenException, BadRequestException, NotFoundException {
     Relationship oLT07jKRu9e = get(Relationship.class, "oLT07jKRu9e");
     Relationship yZxjxJli9mO = get(Relationship.class, "yZxjxJli9mO");
 
     RelationshipOperationParams params =
-        RelationshipOperationParams.builder()
-            .type(TrackerType.EVENT)
-            .identifier("pTzf9KYMk72")
+        RelationshipOperationParams.builder(TrackerType.EVENT, UID.of("pTzf9KYMk72"))
             .orderBy("created", SortDirection.ASC)
             .build();
 
@@ -1477,14 +1466,12 @@ class OrderAndPaginationExporterTest extends TrackerTest {
 
   @Test
   void shouldOrderRelationshipsByCreatedDesc()
-      throws ForbiddenException, NotFoundException, BadRequestException {
+      throws ForbiddenException, BadRequestException, NotFoundException {
     Relationship oLT07jKRu9e = get(Relationship.class, "oLT07jKRu9e");
     Relationship yZxjxJli9mO = get(Relationship.class, "yZxjxJli9mO");
 
     RelationshipOperationParams params =
-        RelationshipOperationParams.builder()
-            .type(TrackerType.EVENT)
-            .identifier("pTzf9KYMk72")
+        RelationshipOperationParams.builder(TrackerType.EVENT, UID.of("pTzf9KYMk72"))
             .orderBy("created", SortDirection.DESC)
             .build();
 
@@ -1515,50 +1502,24 @@ class OrderAndPaginationExporterTest extends TrackerTest {
     return t;
   }
 
-  private static <T> void assertPage(int pageNumber, int pageSize, Page<T> page) {
-    assertNotNull(page, "paginated results should have a page");
-    assertAll(
-        "pagination details",
-        () -> assertEquals(pageNumber, page.getPage(), "number of current page"),
-        () -> assertEquals(pageSize, page.getPageSize(), "page size"));
-  }
-
-  private static <T> void assertPage(int pageNumber, int pageSize, int totalCount, Page<T> page) {
-    assertNotNull(page, "paginated results should have a page");
-    assertAll(
-        "pagination details",
-        () -> assertEquals(pageNumber, page.getPage(), "number of current page"),
-        () -> assertEquals(pageSize, page.getPageSize(), "page size"),
-        () -> assertEquals(totalCount, page.getTotal(), "total count of items"));
-  }
-
   private List<String> getTrackedEntities(TrackedEntityOperationParams params)
       throws ForbiddenException, BadRequestException, NotFoundException {
-    return uids(trackedEntityService.getTrackedEntities(params));
+    return uids(trackedEntityService.findTrackedEntities(params));
   }
 
   private List<String> getEnrollments(EnrollmentOperationParams params)
-      throws ForbiddenException, BadRequestException, NotFoundException {
-    return uids(enrollmentService.getEnrollments(params));
+      throws ForbiddenException, BadRequestException {
+    return uids(enrollmentService.findEnrollments(params));
   }
 
   private List<String> getEvents(EventOperationParams params)
-      throws ForbiddenException, BadRequestException, NotFoundException {
-    return uids(eventService.getEvents(params));
-  }
-
-  private List<String> getEvents(EventOperationParams params, PageParams pageParams)
-      throws ForbiddenException, BadRequestException, NotFoundException {
-    return uids(eventService.getEvents(params, pageParams).getItems());
+      throws ForbiddenException, BadRequestException {
+    return uids(eventService.findEvents(params));
   }
 
   private List<String> getRelationships(RelationshipOperationParams params)
-      throws ForbiddenException, NotFoundException, BadRequestException {
-    return uids(relationshipService.getRelationships(params));
-  }
-
-  private static <T extends BaseIdentifiableObject> List<String> uids(Page<T> events) {
-    return uids(events.getItems());
+      throws ForbiddenException, BadRequestException, NotFoundException {
+    return uids(relationshipService.findRelationships(params));
   }
 
   private static List<String> uids(List<? extends BaseIdentifiableObject> identifiableObject) {
